--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@notionhq/client": "^4.0.0",
     "axios": "^1.6.0",
+    "cheerio": "^1.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
