--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@ vite.config.*.timestamp*
 vitest.config.*.timestamp*
 node_modules
 tmp
+dist
 # .nx
-/.nx
-/dist
-/coverage
-/.nx/cache
-/.nx/workspace-data/*
+# /.nx
+# /.nx
+# /dist
+# /coverage
+# /.nx/cache
+# /.nx/workspace-data/*
+# /.nx/workspace-data/*
